# fluxter

./: .gitignore  .tool-versions  README.md  public.key  pyproject.toml
.github/actions/tools/: action.yml
.github/workflows/: e2e.yaml
apps/prod/: podinfo-values.yaml
clusters/home/: apps.yaml
clusters/home/flux-system/: gotk-sync.yaml
clusters/prod/: apps.yaml  infrastructure.yaml
clusters/prod/flux-system/: gotk-components.yaml  gotk-sync.yaml  kustomization.yaml
infrastructure/nginx/: release.yaml
infrastructure/redis/: kustomization.yaml  redis-auth.yaml  release.yaml
infrastructure/sources/: kustomization.yaml  podinfo.yaml
scripts/: shellcheck  shfmt  validate.sh
terraform/flux/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
